margin on mobile fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -2051,7 +2051,7 @@ body {
   }
 
   .about {
-    margin-top: 30px;
+    margin-top: 50px;
     padding-bottom: 100px;
   }
 
